--- a/DereGuide/en.lproj/Localizable.strings
+++ b/DereGuide/en.lproj/Localizable.strings
@@ -265,6 +265,9 @@
 /* No comment provided by engineer. */
 "使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "Perfect notes will receive a %d%% score bonus, but become harder to hit";
 
+/* No comment provided by engineer. */
+"使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "Perfect notes will receive a %d%% score bonus, and you will gain an extra %d%% combo bonus";
+
 /* 技能描述 */
 "使所有音符恢复你 %d 点生命" = "all notes will restore %d health";
 
@@ -458,6 +461,9 @@
 
 /* No comment provided by engineer. */
 "图片" = "Images";
+
+/* No comment provided by engineer. */
+"坐标之力" = "Coordination";
 
 /* No comment provided by engineer. */
 "基础分" = "Base Score";
