--- a/DereGuide/zh-Hant-TW.lproj/Main.strings
+++ b/DereGuide/zh-Hant-TW.lproj/Main.strings
@@ -1,78 +1,51 @@
+/* Class = "UINavigationController"; title = "卡片导航"; ObjectID = "5Hs-jz-swe"; */
+"5Hs-jz-swe.title" = "卡片導航";
 
 /* Class = "UITableViewController"; title = "工具"; ObjectID = "08b-yF-FVx"; */
 "08b-yF-FVx.title" = "工具";
 
-/* Class = "UINavigationItem"; title = "我的隊伍"; ObjectID = "omj-Op-jcb"; */
-"omj-Op-jcb.title" = "我的隊伍";
-
-/* Class = "UITableViewController"; title = "角色排序和篩選"; ObjectID = "1ey-jy-bHg"; */
-"1ey-jy-bHg.title" = "角色排序和篩選";
-
-/* Class = "UITableViewController"; title = "歌曲篩選和排序"; ObjectID = "2yB-7S-JxI"; */
-"2yB-7S-JxI.title" = "歌曲篩選和排序";
-
-/* Class = "UINavigationController"; title = "卡片導航"; ObjectID = "5Hs-jz-swe"; */
-"5Hs-jz-swe.title" = "卡片導航";
-
 /* Class = "UITabBarItem"; title = "卡片"; ObjectID = "8Lu-2l-B9T"; */
 "8Lu-2l-B9T.title" = "卡片";
 
-/* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "D6I-uh-wTP"; */
-"D6I-uh-wTP.headerTitle" = "排序";
-
-/* Class = "UITabBarController"; title = "根標籤欄"; ObjectID = "Eme-MZ-6LK"; */
+/* Class = "UITabBarController"; title = "根标签栏"; ObjectID = "Eme-MZ-6LK"; */
 "Eme-MZ-6LK.title" = "根標籤欄";
 
-/* Class = "UINavigationController"; title = "組隊導航"; ObjectID = "IyO-O4-iMn"; */
+/* Class = "UITabBarItem"; title = "谱面"; ObjectID = "gE2-j0-zef"; */
+"gE2-j0-zef.title" = "歌曲";
+
+/* Class = "UITabBarItem"; title = "设置"; ObjectID = "gI8-ss-NS6"; */
+"gI8-ss-NS6.title" = "設定";
+
+/* Class = "UITableViewController"; title = "卡片"; ObjectID = "hop-gk-wsV"; */
+"hop-gk-wsV.title" = "卡片";
+
+/* Class = "UINavigationController"; title = "组队导航"; ObjectID = "IyO-O4-iMn"; */
 "IyO-O4-iMn.title" = "組隊導航";
 
-/* Class = "UITabBarItem"; title = "組隊"; ObjectID = "Ji2-5n-2Mz"; */
+/* Class = "UITabBarItem"; title = "组队"; ObjectID = "Ji2-5n-2Mz"; */
 "Ji2-5n-2Mz.title" = "組隊";
 
-/* Class = "UINavigationController"; title = "歌曲導航"; ObjectID = "KxG-H5-NIc"; */
+/* Class = "UINavigationController"; title = "谱面导航"; ObjectID = "KxG-H5-NIc"; */
 "KxG-H5-NIc.title" = "歌曲導航";
 
-/* Class = "UINavigationController"; title = "設定導航"; ObjectID = "Lc3-lA-ZOL"; */
+/* Class = "UINavigationController"; title = "设置导航"; ObjectID = "Lc3-lA-ZOL"; */
 "Lc3-lA-ZOL.title" = "設定導航";
 
 /* Class = "UINavigationItem"; title = "谱面"; ObjectID = "OeQ-8h-gYQ"; */
 "OeQ-8h-gYQ.title" = "歌曲";
 
-/* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "S9a-oB-UoS"; */
-"S9a-oB-UoS.headerTitle" = "排序";
+/* Class = "UINavigationItem"; title = "我的队伍"; ObjectID = "omj-Op-jcb"; */
+"omj-Op-jcb.title" = "我的隊伍";
 
-/* Class = "UITableViewController"; title = "卡片篩選和排序"; ObjectID = "XB8-jt-AiW"; */
-"XB8-jt-AiW.title" = "卡片篩選和排序";
-
-/* Class = "UITableViewController"; title = "卡片"; ObjectID = "XEw-Y1-ITn"; */
-"XEw-Y1-ITn.title" = "卡片";
-
-/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "XrL-IG-AMC"; */
-"XrL-IG-AMC.headerTitle" = "篩選";
-
-/* Class = "UITableViewController"; title = "組隊"; ObjectID = "Zys-WZ-9cy"; */
-"Zys-WZ-9cy.title" = "組隊";
-
-/* Class = "UITabBarItem"; title = "谱面"; ObjectID = "gE2-j0-zef"; */
-"gE2-j0-zef.title" = "歌曲";
-
-/* Class = "UITabBarItem"; title = "設定"; ObjectID = "gI8-ss-NS6"; */
-"gI8-ss-NS6.title" = "設定";
-
-/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "hJn-41-ekr"; */
-"hJn-41-ekr.headerTitle" = "篩選";
-
-/* Class = "UITableViewSection"; headerTitle = "排序"; ObjectID = "rD2-JL-rj6"; */
-"rD2-JL-rj6.headerTitle" = "排序";
-
-/* Class = "UINavigationController"; title = "工具導航"; ObjectID = "sAv-Q2-aG8"; */
+/* Class = "UINavigationController"; title = "工具导航"; ObjectID = "sAv-Q2-aG8"; */
 "sAv-Q2-aG8.title" = "工具導航";
-
-/* Class = "UITableViewSection"; headerTitle = "篩選"; ObjectID = "vSe-a1-0gm"; */
-"vSe-a1-0gm.headerTitle" = "篩選";
 
 /* Class = "UITabBarItem"; title = "工具"; ObjectID = "wJt-PI-tVQ"; */
 "wJt-PI-tVQ.title" = "工具";
 
-/* Class = "UINavigationItem"; title = "實用工具"; ObjectID = "zeC-Rh-4X6"; */
+/* Class = "UINavigationItem"; title = "实用工具"; ObjectID = "zeC-Rh-4X6"; */
 "zeC-Rh-4X6.title" = "實用工具";
+
+/* Class = "UINavigationItem"; title = "设置"; ObjectID = "zkd-c8-p78"; */
+"zkd-c8-p78.title" = "設定";
+
