--- a/Localizations/DereGuide/ja.xliff
+++ b/Localizations/DereGuide/ja.xliff
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?><xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
   <file original="DereGuide/Base.lproj/Main.storyboard" source-language="zh-Hans" datatype="plaintext" target-language="ja">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="9.4.1" build-num="9F2000"/>
@@ -688,6 +689,11 @@
         <target>LIVE Party!!</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="协调">
+        <source>协调</source>
+        <target>コーディネイト</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级">
         <source>单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级</source>
         <target>タップ：編集枠を変更\nダブルタップ：すべてのカードから選択\n長押し：ポテンシャルや特技レベルの編集</target>
@@ -823,11 +829,6 @@
       <trans-unit id="图片">
         <source>图片</source>
         <target>画像</target>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="坐标之力">
-        <source>坐标之力</source>
-        <target>コーディネイト</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="基础分">
@@ -1297,6 +1298,10 @@
         <target>データバージョンは最新です</target>
         <note>更新框</note>
       </trans-unit>
+      <trans-unit id="数据更新日志">
+        <source>数据更新日志</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="数据服务器存在异常，请您稍后再尝试更新。">
         <source>数据服务器存在异常，请您稍后再尝试更新。</source>
         <target>データサーバーに異常があります。しばらく待ってから再び更新してください。</target>
@@ -1312,10 +1317,34 @@
         <target>データの更新が必要です</target>
         <note>弹出框标题</note>
       </trans-unit>
+      <trans-unit id="新卡池：%@">
+        <source>新卡池：%@</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新卡片：%@%@，技能：%@%@%@">
+        <source>新卡片：%1$@%2$@，技能：%3$@%4$@%5$@</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="新增卡片">
         <source>新增卡片</source>
         <target>新アイドル</target>
         <note>模拟抽卡页面</note>
+      </trans-unit>
+      <trans-unit id="新小剧场动画：%@ %@">
+        <source>新小剧场动画：%1$@ %2$@</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新小剧场：%@ %@">
+        <source>新小剧场：%1$@ %2$@</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新歌曲：%@">
+        <source>新歌曲：%@</source>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新活动：%@">
+        <source>新活动：%@</source>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="无">
         <source>无</source>
@@ -2232,7 +2261,7 @@
       </trans-unit>
     </body>
   </file>
-  <file original="DereGuideTests/zh-Hans.lproj/InfoPlist.strings" datatype="plaintext" source-language="zh-Hans" target-language="ja">
+  <file original="DereGuideTests/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" datatype="plaintext" target-language="ja">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="9.4.1" build-num="9F2000"/>
     </header>
