--- a/Localizations/DereGuide/zh-Hant.xliff
+++ b/Localizations/DereGuide/zh-Hant.xliff
@@ -688,6 +688,11 @@
         <target>協力活動</target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
+      <trans-unit id="协调">
+        <source>协调</source>
+        <target>協調</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级">
         <source>单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级</source>
         <target>單擊選擇要修改的位置，雙擊可以從全部卡片中選擇，長按可以編輯潛能和技能等級</target>
@@ -823,11 +828,6 @@
       <trans-unit id="图片">
         <source>图片</source>
         <target>圖片</target>
-        <note>No comment provided by engineer.</note>
-      </trans-unit>
-      <trans-unit id="坐标之力">
-        <source>坐标之力</source>
-        <target></target>
         <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="基础分">
@@ -1297,6 +1297,11 @@
         <target>資料是最新版本</target>
         <note>更新框</note>
       </trans-unit>
+      <trans-unit id="数据更新日志">
+        <source>数据更新日志</source>
+        <target>資料更新日誌</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="数据服务器存在异常，请您稍后再尝试更新。">
         <source>数据服务器存在异常，请您稍后再尝试更新。</source>
         <target>資料伺服器存在異常，請您稍後再嘗試更新。</target>
@@ -1312,10 +1317,40 @@
         <target>資料需要更新</target>
         <note>弹出框标题</note>
       </trans-unit>
+      <trans-unit id="新卡池：%@">
+        <source>新卡池：%@</source>
+        <target>新卡池：%@</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新卡片：%@%@，技能：%@%@%@">
+        <source>新卡片：%1$@%2$@，技能：%3$@%4$@%5$@</source>
+        <target>新卡片：%1$@%2$@，技能：%3$@%4$@%5$@</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="新增卡片">
         <source>新增卡片</source>
         <target>新增卡片</target>
         <note>模拟抽卡页面</note>
+      </trans-unit>
+      <trans-unit id="新小剧场动画：%@ %@">
+        <source>新小剧场动画：%1$@ %2$@</source>
+        <target>新小劇場動畫：%1$@ %2$@</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新小剧场：%@ %@">
+        <source>新小剧场：%1$@ %2$@</source>
+        <target>新小劇場：%1$@ %2$@</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新歌曲：%@">
+        <source>新歌曲：%@</source>
+        <target>新歌曲：%@</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
+      <trans-unit id="新活动：%@">
+        <source>新活动：%@</source>
+        <target>新活動：%@</target>
+        <note>No comment provided by engineer.</note>
       </trans-unit>
       <trans-unit id="无">
         <source>无</source>
@@ -2232,7 +2267,7 @@
       </trans-unit>
     </body>
   </file>
-  <file original="DereGuideTests/zh-Hans.lproj/InfoPlist.strings" datatype="plaintext" source-language="zh-Hans" target-language="zh-Hant-TW">
+  <file original="DereGuideTests/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" datatype="plaintext" target-language="zh-Hant-TW">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="9.4.1" build-num="9F2000"/>
     </header>
@@ -2244,7 +2279,7 @@
       </trans-unit>
     </body>
   </file>
-  <file original="NotificationContent/zh-Hans.lproj/InfoPlist.strings" datatype="plaintext" source-language="zh-Hans" target-language="zh-Hant-TW">
+  <file original="NotificationContent/zh-Hans.lproj/InfoPlist.strings" source-language="zh-Hans" datatype="plaintext" target-language="zh-Hant-TW">
     <header>
       <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="9.4.1" build-num="9F2000"/>
     </header>
