--- a/DereGuide/ja.lproj/InfoPlist.strings
+++ b/DereGuide/ja.lproj/InfoPlist.strings
@@ -1,9 +1,25 @@
 /* Bundle name */
 "CFBundleName" = "DereGuide";
 
-/* Privacy - Photo Library Additions Usage Description */
+/* (No Comment) */
 "NSPhotoLibraryAddUsageDescription" = "ここでアプリをアルバムへのアクセス権限を許可してください。プライバシーの変更はあとでシステム設定に変更することができます。";
 
-/* Privacy - Photo Library Usage Description */
+/* InfoPlist.strings
+  DereGuide
+
+  Created by zzk on 2016/9/26.
+  Copyright © 2016 zzk. All rights reserved. */
 "NSPhotoLibraryUsageDescription" = "ここでアプリをアルバムへのアクセス権限を許可してください。プライバシーの変更はあとでシステム設定に変更することができます。";
+
+/* (No Comment) */
+"shortcutItemTitle1" = "カード";
+
+/* (No Comment) */
+"shortcutItemTitle2" = "譜面";
+
+/* (No Comment) */
+"shortcutItemTitle3" = "イベント";
+
+/* (No Comment) */
+"shortcutItemTitle4" = "ガシャシミュレーター";
 
