--- a/DereGuide/zh-Hant-TW.lproj/InfoPlist.strings
+++ b/DereGuide/zh-Hant-TW.lproj/InfoPlist.strings
@@ -1,9 +1,25 @@
 /* Bundle name */
 "CFBundleName" = "$(PRODUCT_NAME)";
 
-/* Privacy - Photo Library Additions Usage Description */
+/* (No Comment) */
 "NSPhotoLibraryAddUsageDescription" = "請允許本程式將圖片儲存至您的相簿，隨後您也可以在系統設定中隨時修改。";
 
-/* Privacy - Photo Library Usage Description */
+/* InfoPlist.strings
+  DereGuide
+
+  Created by zzk on 2016/9/26.
+  Copyright © 2016 zzk. All rights reserved. */
 "NSPhotoLibraryUsageDescription" = "請允許本程式將圖片儲存至您的相簿，隨後您也可以在系統設定中隨時修改。";
+
+/* (No Comment) */
+"shortcutItemTitle1" = "卡片";
+
+/* (No Comment) */
+"shortcutItemTitle2" = "譜面";
+
+/* (No Comment) */
+"shortcutItemTitle3" = "活動";
+
+/* (No Comment) */
+"shortcutItemTitle4" = "模擬抽卡";
 
