--- a/DereGuide/ja.lproj/Localizable.strings
+++ b/DereGuide/ja.lproj/Localizable.strings
@@ -748,6 +748,9 @@
 /* 更新框 */
 "数据是最新版本" = "データバージョンは最新です";
 
+/* No comment provided by engineer. */
+"数据更新日志" = "データ更新ログ";
+
 /* 数据更新时的错误提示 */
 "数据服务器存在异常，请您稍后再尝试更新。" = "データサーバーに異常があります。しばらく待ってから再び更新してください。";
 
@@ -757,8 +760,26 @@
 /* 弹出框标题 */
 "数据需要更新" = "データの更新が必要です";
 
+/* No comment provided by engineer. */
+"新卡池：%@" = "新しいガチャ：%@";
+
+/* No comment provided by engineer. */
+"新卡片：%@%@，技能：%@%@%@" = "新しいカード：％1$@％2$@、スキル：％3$@％4$@％5$@";
+
 /* 模拟抽卡页面 */
 "新增卡片" = "新アイドル";
+
+/* No comment provided by engineer. */
+"新小剧场：%@ %@" = "新しい劇場：%1$@ %2$@";
+
+/* No comment provided by engineer. */
+"新小剧场动画：%@ %@" = "新しい劇場アニメ：%1$@ %2$@";
+
+/* No comment provided by engineer. */
+"新歌曲：%@" = "新しい音楽：%@";
+
+/* No comment provided by engineer. */
+"新活动：%@" = "新しいイベント：%@";
 
 /* 空字符串说明文字 */
 "无" = "なし";
