--- a/NotificationContent/ja.lproj/InfoPlist.strings
+++ b/NotificationContent/ja.lproj/InfoPlist.strings
@@ -2,5 +2,5 @@
 "CFBundleDisplayName" = "NotificationContent";
 
 /* Bundle name */
-"CFBundleName" = "$(PRODUCT_NAME)";
+"CFBundleName" = "DereGuide";
 
