--- a/Localizations/DereGuide/zh-Hant.xcloc/contents.json
+++ b/Localizations/DereGuide/zh-Hant.xcloc/contents.json
@@ -2,10 +2,10 @@
   "developmentRegion" : "zh-Hans",
   "targetLocale" : "zh-Hant",
   "toolInfo" : {
-    "toolBuildNumber" : "10A254a",
+    "toolBuildNumber" : "10B61",
     "toolID" : "com.apple.dt.xcode",
     "toolName" : "Xcode",
-    "toolVersion" : "10.0"
+    "toolVersion" : "10.1"
   },
   "version" : "1.0"
 }
