--- a/DereGuide/zh-Hant.lproj/Localizable.strings
+++ b/DereGuide/zh-Hant.lproj/Localizable.strings
@@ -8,10 +8,19 @@
 "* 不含后援值，歌曲模式为常规模式" = "* 不含後援值，歌曲模式為常規模式";
 
 /* (No Comment) */
+"* 全P模式中所有Note都为Perfect\\n* 挂机模式中除非技能增强和SSR强判技能同时存在，所有Note都将丢失\\n* 如果您在高级选项中设置了手动打前 x 秒或前 x combo，则指定范围的Note视为全P" = "* 全P模式中所有Note都為Perfect\\n* 掛機模式中除非技能增強和SSR強判技能同時存在，所有Note都將丟失\\n* 如果您在高階選項中設定了手動打前 x 秒或前 x combo，則指定範圍的Note視為全P";
+
+/* (No Comment) */
 "* 左滑删除" = "* 左滑刪除";
 
 /* (No Comment) */
 "* 本图是得分分布的近似概率密度曲线，模拟次数越多越精确" = "* 本圖是得分分佈的近似概率密度曲線，模擬次數越多越精確";
+
+/* No comment provided by engineer. */
+"* 极限分数中所有技能100%触发\\n* 极限分数1中note取PERFECT判定区间中的最优值\\n* 模拟计算结果是取模拟次数前x%内的最低分数，每次会略有不同\\n* 选取Groove模式或LIVE Parade模式时会自动忽略好友队长的影响\\n* 存在一些暂时不支持计算平均分数的技能，平均分数将会显示为n/a" = "* 極限分數中所有技能100%1$觸發\\n* 極限分數1中note取PERFECT判定區間中的最優值\\n* 模擬計算結果是取模擬次數前x%2$內的最低分數，每次會略有不同\\n* 選取Groove模式或LIVE Parade模式時會自動忽略好友隊長的影響\\n* 存在一些暫時不支援計算平均分數的技能，平均分數將會顯示為n/a";
+
+/* (No Comment) */
+"* 随机模式中技能按照触发率随机触发\\n* 极限1模式中所有Note取判定区间内的最大得分而且技能必定触发\\n* 极限2模式中技能必定触发\\n* 悲观模式中技能触发几率低于100%的技能必定不触发" = "* 隨機模式中技能按照觸發率隨機觸發\\n* 極限1模式中所有Note取判定區間內的最大得分而且技能必定觸發\\n* 極限2模式中技能必定觸發\\n* 悲觀模式中技能觸發機率低於100%的技能必定不觸發";
 
 /* No comment provided by engineer. */
 "%@和%@" = "%@和%@";
@@ -28,6 +37,9 @@
 /* 角色信息页面 */
 "%d月%d日" = "%1$d月%2$d日";
 
+/* No comment provided by engineer. */
+"bpm" = "bpm";
+
 /* 技能类型 */
 "Combo保护" = "Combo保護";
 
@@ -36,6 +48,9 @@
 
 /* (No Comment) */
 "Cool" = "Cool";
+
+/* No comment provided by engineer. */
+"Copyright of" = "Copyright of";
 
 /* (No Comment) */
 "Copyright of Game Data" = "遊戲相關資料版權";
@@ -79,6 +94,9 @@
 /* 队伍详情页面 */
 "Groove类别" = "Groove類別";
 
+/* No comment provided by engineer. */
+"HP" = "HP";
+
 /* 
  */
 "MV站位" = "MV站位";
@@ -107,6 +125,9 @@
 
 /* (No Comment) */
 "Special Thanks to" = "特別鳴謝";
+
+/* No comment provided by engineer. */
+"Sprite" = "Sprite";
 
 /* (No Comment) */
 "Third-party Libraries" = "第三方庫";
@@ -246,6 +267,9 @@
 /* (No Comment) */
 "使所有PERFECT音符获得 %d%% 的分数加成，且使PERFECT判定区间的时间范围缩小" = "使所有PERFECT音符獲得 %d%% 的分數加成，且使PERFECT判定區間的時間範圍縮小";
 
+/* No comment provided by engineer. */
+"使所有PERFECT音符获得 %d%% 的分数加成，并获得额外的 %d%% 的COMBO加成" = "使所有PERFECT音符獲得 %1$d%% 的分數加成，並獲得額外的 %2$d%% 的COMBO加成";
+
 /* 技能描述 */
 "使所有音符恢复你 %d 点生命" = "使所有音符恢復你 %d 點生命";
 
@@ -357,6 +381,9 @@
 /* (No Comment) */
 "协力活动" = "協力活動";
 
+/* No comment provided by engineer. */
+"协调" = "協調";
+
 /* (No Comment) */
 "单击选择要修改的位置，双击可以从全部卡片中选择，长按可以编辑潜能和技能等级" = "單擊選擇要修改的位置，雙擊可以從全部卡片中選擇，長按可以編輯潛能和技能等級";
 
@@ -380,6 +407,9 @@
 
 /* (No Comment) */
 "卡片" = "卡片";
+
+/* No comment provided by engineer. */
+"卡片 Sprite 图" = "卡片 Sprite 圖";
 
 /* new in v1.2.0(7+) */
 "卡片图" = "卡片圖";
@@ -452,6 +482,9 @@
 /* new in v1.1.5 */
 "复制" = "複製";
 
+/* No comment provided by engineer. */
+"大图" = "大圖";
+
 /* 模拟抽卡页面 */
 "天井" = "天井";
 
@@ -491,6 +524,9 @@
 
 /* (No Comment) */
 "小屋加成%" = "小屋加成%";
+
+/* No comment provided by engineer. */
+"属性" = "屬性";
 
 /* 卡片详情页 */
 "属性排名" = "屬性排名";
@@ -713,6 +749,9 @@
 /* 更新框 */
 "数据是最新版本" = "資料是最新版本";
 
+/* No comment provided by engineer. */
+"数据更新日志" = "資料更新日誌";
+
 /* 数据更新时的错误提示 */
 "数据服务器存在异常，请您稍后再尝试更新。" = "資料伺服器存在異常，請您稍後再嘗試更新。";
 
@@ -722,8 +761,26 @@
 /* 弹出框标题 */
 "数据需要更新" = "資料需要更新";
 
+/* No comment provided by engineer. */
+"新卡池：%@" = "新卡池：%@";
+
+/* No comment provided by engineer. */
+"新卡片：%@%@，技能：%@%@%@" = "新卡片：%1$@%2$@，技能：%3$@%4$@%5$@";
+
 /* 模拟抽卡页面 */
 "新增卡片" = "新增卡片";
+
+/* No comment provided by engineer. */
+"新小剧场：%@ %@" = "新小劇場：%1$@ %2$@";
+
+/* No comment provided by engineer. */
+"新小剧场动画：%@ %@" = "新小劇場動畫：%1$@ %2$@";
+
+/* No comment provided by engineer. */
+"新歌曲：%@" = "新歌曲：%@";
+
+/* No comment provided by engineer. */
+"新活动：%@" = "新活動：%@";
 
 /* 空字符串说明文字 */
 "无" = "無";
@@ -802,6 +859,9 @@
 
 /* (No Comment) */
 "本程序基于MIT协议，详情请访问：" = "本程式基於MIT協議，詳情請訪問：";
+
+/* new in 1.2.1 */
+"本程序是非官方程序，与官方应用\"アイドルマスターシンデレラガールズ スターライトステージ\"没有任何关联。所有本程序中使用的游戏相关数据版权所属为：\\nBANDAI NAMCO Entertainment Inc.\\n\\n本程序所使用的非官方数据来源于网络，其版权在不违反官方版权的前提下遵循数据提供者的版权声明。\\n\\n本程序不能保证所提供的数据真实可靠，由此带来的风险由使用者承担。" = "本程式是非官方程式，與官方應用\"アイドルマスターシンデレラガールズ スターライトステージ\"沒有任何關聯。所有本程式中使用的遊戲相關資料版權所屬為：\\nBANDAI NAMCO Entertainment Inc.\\n\\n本程式所使用的非官方資料來源於網路，其版權在不違反官方版權的前提下遵循資料提供者的版權宣告。\\n\\n本程式不能保證所提供的資料真實可靠，由此帶來的風險由使用者承擔。";
 
 /* (No Comment) */
 "极限1" = "極限1";
@@ -976,6 +1036,9 @@
 
 /* (No Comment) */
 "筛选条件" = "篩選條件";
+
+/* No comment provided by engineer. */
+"签名" = "簽名";
 
 /* (No Comment) */
 "签名图" = "簽名圖";
@@ -1152,6 +1215,9 @@
 /* 技能类型 */
 "锁血" = "鎖血";
 
+/* 设置页面 */
+"问题反馈" = "問題反饋";
+
 /* 弹出框标题 */
 "队伍不完整" = "隊伍不完整";
 
@@ -1224,6 +1290,9 @@
 
 /* (No Comment) */
 "高级选项" = "高階選項";
+
+/* No comment provided by engineer. */
+"默认开启谱面镜像" = "預設開啟譜面翻轉";
 
 /* (No Comment) */
 "默认潜能等级" = "預設潛能等級";
