--- a/Localizations/DereGuide/en.xcloc/Localized Contents/en.xliff
+++ b/Localizations/DereGuide/en.xcloc/Localized Contents/en.xliff
@@ -2284,6 +2284,11 @@
         <target>Advance Options</target>
         <note/>
       </trans-unit>
+      <trans-unit id="默认开启谱面镜像">
+        <source>默认开启谱面镜像</source>
+        <target>Mirror flipped by default</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="默认潜能等级">
         <source>默认潜能等级</source>
         <target>Default Potential Level</target>
