--- a/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
+++ b/Localizations/DereGuide/ja.xcloc/Localized Contents/ja.xliff
@@ -2286,6 +2286,11 @@
         <target>アドバンスオプション</target>
         <note/>
       </trans-unit>
+      <trans-unit id="默认开启谱面镜像">
+        <source>默认开启谱面镜像</source>
+        <target>ミラーフリップはデフォルトでオン</target>
+        <note>No comment provided by engineer.</note>
+      </trans-unit>
       <trans-unit id="默认潜能等级">
         <source>默认潜能等级</source>
         <target>既定ポテLv.</target>
