--- a/DereGuide/zh-Hant.lproj/InfoPlist.strings
+++ b/DereGuide/zh-Hant.lproj/InfoPlist.strings
@@ -1,3 +1,6 @@
+/* Bundle name */
+"CFBundleName" = "DereGuide";
+
 /* (No Comment) */
 "NSPhotoLibraryAddUsageDescription" = "請允許本程式將圖片儲存至您的相簿，隨後您也可以在系統設定中隨時修改。";
 
